--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
-# Base image
-FROM node:20-alpine
+# Build stage
+FROM node:20-alpine AS builder
 
 # Set working directory
 WORKDIR /app
@@ -13,11 +13,44 @@ RUN npm install
 # Copy the rest of the application
 COPY . .
 
-# Update the proxy configuration for Docker
-ENV REACT_APP_API_URL=http://backend:8000
+# Build the application based on environment
+ARG ENVIRONMENT=production
+ENV ENVIRONMENT=$ENVIRONMENT
 
-# Expose port 3000
+# For local development
+RUN if [ "$ENVIRONMENT" = "local" ] ; then \
+        echo "Preparing for local development" ; \
+    else \
+        echo "Building for production" && \
+        npm run build ; \
+    fi
+
+# Production stage
+FROM node:20-alpine AS production
+
+WORKDIR /app
+
+# For production, use nginx to serve static files
+RUN if [ "$ENVIRONMENT" = "production" ] ; then \
+        apk add --no-cache nginx && \
+        mkdir -p /run/nginx ; \
+    fi
+
+# Copy either the development or production files
+COPY --from=builder /app /app
+
+# Copy nginx configuration for production
+COPY nginx.conf /etc/nginx/http.d/default.conf
+
+# Environment variables
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
+
+# Expose port (Cloud Run will override this with $PORT)
 EXPOSE 3000
 
-# Start the application
-CMD ["npm", "start"]
+# Start script that handles both environments
+COPY start-frontend.sh /app/start-frontend.sh
+RUN chmod +x /app/start-frontend.sh
+
+CMD ["/app/start-frontend.sh"]
